# ggplot2

./: .pre-commit-config.yaml  PARITY.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
ggplot/: __init__.py  addables.py  annotations.py  composition.py  exceptions.py  ggplot.py  ggsave.py  guides.py  layer.py  layers.py  limits.py  other.py  qplot.py  save_as_pdf_pages.py  title.py  typing.py
ggplot/_utils/: data.py  scales.py
ggplot/coords/: __init__.py  coord.py  coord_cartesian.py  coord_equal.py  coord_fixed.py  coord_flip.py  coord_trans.py
ggplot/facets/: __init__.py  facet.py  facet_grid.py  facet_null.py  facet_wrap.py  labelling.py
ggplot/geoms/: __init__.py  geom.py  geom_abline.py  geom_area.py  geom_bar.py  geom_bin_2d.py  geom_blank.py  geom_boxplot.py  geom_col.py  geom_count.py  geom_crossbar.py  geom_density.py  geom_density_2d.py  geom_dotplot.py  geom_errorbar.py  geom_errorbarh.py  geom_freqpoly.py  geom_histogram.py  geom_hline.py  geom_jitter.py  geom_label.py  geom_line.py  geom_linerange.py  geom_map.py  geom_path.py  geom_point.py  geom_pointdensity.py  geom_pointrange.py  geom_polygon.py  geom_qq.py  geom_qq_line.py  geom_quantile.py  geom_raster.py  geom_rect.py  geom_ribbon.py  geom_rug.py  geom_segment.py  geom_sina.py  geom_smooth.py  geom_spoke.py  (+5 more)
ggplot/mapping/: __init__.py  aes.py  evaluation.py
ggplot/positions/: __init__.py  position.py  position_dodge.py  position_dodge2.py  position_fill.py  position_identity.py  position_jitter.py  position_jitterdodge.py  position_nudge.py  position_stack.py
ggplot/scales/: __init__.py  compat.py  scale.py  (+6 more)
scripts/: precommit_pytest.sh
tests/: README.md  conftest.py  test_smoke.py
(+130 files in other folders)
