[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggplot2"
version = "0.0.0"
description = "A Plotly-backed port of plotnine (ggplot-style Grammar of Graphics)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Contributors"}]
dependencies = [
  "plotly>=5",
  "pandas>=2",
  "numpy>=1.24",
  "kaleido>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
  "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["tests/plotnine_upstream"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/plotnine_upstream/**" = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ggplot*"]

[tool.uv.workspace]
members = [
    "ggplot2",
]
